2004-11-24  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/geom/Arc2D.java:
        Resynced with GNU Classpath.

	2004-11-17  Sven de Marothy  <sven@physto.se>

        * java/awt/geom/Arc2D.java,
        (setAngleStart): Corrected (wrong sign on atan2 y parameter)
        (setAngles): Likewise
        (containsAngle): Return false on zero extent, don't include final angle
        (contains): Treat OPEN-type arcs like CHORD ones, not as PIE ones.

2004-11-24  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/geom/AffineTransform.java:
        Resynced with GNU Classpath.

	2004-11-16  Sven de Marothy  <sven@physto.se>

        * java/awt/geom/AffineTransform.java,
        (inverseTransform): Fixed bug and simplified code.
        (createTransformedShape): Return null on null parameter.

2004-11-24  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/util/Collections.java:
        Resynced with GNU Classpath.

	2004-11-16  Michael Koch  <konqueror@gmx.de>

        * java/util/Collections.java (synchronizedSortedMap):
        Removed some cruft in javadoc.

2004-11-24  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/io/BufferedReader.java,
	libraries/javalib/java/io/FileInputStream.java,
	libraries/javalib/java/io/FileOutputStream.java,
	libraries/javalib/java/io/FileWriter.java,
	libraries/javalib/java/io/OutputStreamWriter.java,
	libraries/javalib/java/io/PipedInputStream.java,
	libraries/javalib/java/io/PipedOutputStream.java,
	libraries/javalib/java/io/PipedReader.java,
	libraries/javalib/java/io/PipedWriter.java,
	libraries/javalib/java/io/PrintStream.java,
	libraries/javalib/java/io/PushbackInputStream.java,
	libraries/javalib/java/io/RandomAccessFile.java,
	libraries/javalib/java/io/Reader.java,
	libraries/javalib/java/io/StreamTokenizer.java,
	libraries/javalib/java/io/StringReader.java,
	libraries/javalib/java/net/NetworkInterface.java,
	libraries/javalib/java/net/URLClassLoader.java,